@@ -56,6 +56,6 @@ int	regexp_match_ex(const zbx_vector_ptr_t *regexps, const char *string, const c
 int	regexp_sub_ex(const zbx_vector_ptr_t *regexps, const char *string, const char *pattern, int case_sensitive,
 		const char *output_template, char **output);
 int	zbx_global_regexp_exists(const char *name, const zbx_vector_ptr_t *regexps);
-void 	zbx_regexp_escape(char **string);
+void	zbx_regexp_escape(char **string);
 
 #endif /* ZABBIX_ZBXREGEXP_H */
