@@ -5242,6 +5242,14 @@ static int	process_lld_macro_token(char **data, zbx_token_t *token, int flags, c
 	{
 		zbx_regexp_escape(&replace_to);
 	}
+	else if (0 != (flags & ZBX_TOKEN_REGEXP_OUTPUT))
+	{
+		char	*replace_to_esc;
+
+		replace_to_esc = zbx_dyn_escape_string(replace_to, "\\");
+		zbx_free(replace_to);
+		replace_to = replace_to_esc;
+	}
 	else if (0 != (flags & ZBX_TOKEN_XPATH))
 	{
 		xml_escape_xpath(&replace_to);
